--- a/webapp/index.html
+++ b/webapp/index.html
@@ -23,18 +23,22 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		<script>
+			// document.addEventListener('contextmenu', event => event.preventDefault()); // disable right click
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
 						name : "nabi.demo.MyLibraryDemoApp"
 					})
+					// app.addEventListener('contextmenu', event => event.preventDefault());
+					// viewer.html
+					 //<body onload="renderPage(1)" tabindex="1" class="loadingInProgress" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 				}).placeAt("content");
 			});
 		</script>
 	</head>
 
-	<body class="sapUiBody" id="content">
+	<body class="sapUiBody" id="content" oncontextmenu="return false;">
 	</body>
 
 </html>
