--- a/PDFJSBasics2/viewer6_3.html
+++ b/PDFJSBasics2/viewer6_3.html
@@ -499,7 +499,7 @@ document.getElementById('page_num2').addEventListener("keyup", function(event) {
 }
  var init = function( ){
     
-    oWaterMark.innerText = "Water Mark!! - person Name"
+    oWaterMark.innerText = "Water Mark!! - person Name";
     
     // get URL Params!
     var surl = window.location.href;
