next to do ... timer and zoom

--- a/PDFJSBasics2/viewer6_3.html
+++ b/PDFJSBasics2/viewer6_3.html
@@ -658,6 +658,28 @@ function callServerForBrowserCloseEvent()
  console.log("exit browser");
 }
 
+// Run javascript function when user finishes typing instead of on key up?
+var typingTimer;                //timer identifier
+var doneTypingInterval = 5000;  //time in ms, 5 second for example
+// var $input = $('#myInput');
+// //on keyup, start the countdown
+// $input.on('keyup', function () {
+//   clearTimeout(typingTimer);
+//   typingTimer = setTimeout(doneTyping, doneTypingInterval);
+// });
+
+// //on keydown, clear the countdown 
+// $input.on('keydown', function () {
+//   clearTimeout(typingTimer);
+// });
+
+// //user is "finished typing," do something
+// function doneTyping () {
+//   //do something
+// }
+
+
+// zoom in and zoom out from the browser to the buttons 
 
 </script>
 </html>
